kubernetes/apps/gatus/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.f9.casa`)
      kind: Rule
      services:
        - name: gatus
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
